# csp-intercept

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  TODOS.md  install  meson.build  meson_options.txt
.github/workflows/: ci.yml
apm/: csp_monitor_apm.c  meson.build
captures/: dipp_sweep.csv  flight_dtp_20260624.csv  h2_rawdtp_finding.md  rawdtp_sweep.csv  rdp_bigmem_sweep.csv  rdp_sweep.csv  satdeploy_sweep.csv
csh/demo/: README.md  dipp-upload.csh  rawdtp-pull.csh  rawdtp-resume.csh  restart-upload-client.csh
cspx/: __init__.py  adapters.py  cli.py  rules.json  verdict.py
cspx/tests/: test_verdict.py
cspx/tests/fixtures/: rawdtp_false_complete.csv  rdp_fail_loud.csv  rdp_pass.csv  rq3_false_complete.csv
demo/fixtures/: payload_256k.manifest  rq3_corruption.csv
diagrams/: test-rig.excalidraw  test-rig.mmd
docker/: Dockerfile  Dockerfile.loop
docs/: HOWTO.md  OPERATOR.md  can-kiss-injection.md  csp-debugger-design.md  cspx-assurance-tool-spec.md  dtp-metric.md  two-oracle-loop.md  verify-spec.md
experiments/: README.md  bringup_dipp.csh  bringup_upload_client.csh  exp_dtp_pull.csh  exp_rdp.csh  exp_svu.csh  exp_upload_file.csh
inject/: ci_drop_iface.c  ci_drop_iface.h  meson.build
lib/: ci_dtp.c  ci_dtp.h  ci_ge.c  ci_ge.h  ci_meas.c  ci_meas.h  ci_prng.h  ci_rdp.c  ci_rdp.h  ci_rule.c  ci_rule.h  ci_sha256.c  ci_sha256.h  ci_svu.c  ci_svu.h
proxy/: meson.build  zmqproxy.c
satguard/: .gitignore  satguard.py
satguard/case-studies/: DISCO-2_case_study.md  disco2_audit.html
satguard/design/: brief.txt
scripts/: _regime_common.py  bringup-vmem-node  can0-bench  csp-verify  demo-silent-corruption  deploy-agent  dipp-sweep  lbuild  loop-in-container.sh  oracle_join.awk  parse_flight_dtp.py  parse_prometheus_telemetry.py  plot_calibration.py  plot_headline.py  rawdtp-point  rawdtp-sweep  rdp-bigmem-sweep  rdp-point  rdp-repro-5431  rdp-sweep  real_regime_annotation.py  restart-upload-client  satdeploy-sweep  svu-board-sweep  svu-point  svu-stageb  sweep  test_parse_prometheus.py  test_real_regime_annotation.py  test_within_pass_blackouts.py  two-oracle-loop  upload-point  within_pass_blackouts.py
svu/: experiment.csh  experiment.sh  meson.build  svu_apm.c  svu_client.c  svu_daemon.c  svu_debug.c  svu_net.c  svu_net.h  svu_proto.h  svu_push.c  svu_serve.c  svu_serve.h  svu_server.c  svu_session.c  svu_session.h
tests/: ci_svu_test.c  ge_host.c  svu_loop_host.c  test_lib.c
tests/e2e/: apm_host.c  bound_guard.sh  bridge_dry_run.sh  ci_gen.c  ci_gen_dtp.c  ci_inject_bridge.c  ci_inject_can.c  ci_monitor_host.c  ci_oversize.c  ci_sub.c  cli_guard.sh  determinism.sh  drop_iface_host.c  forwarding.sh  meson.build  two_oracle.sh  two_oracle_dtp.sh  vmem_node.c
